Reducing xshifts from logos in cover

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{csquotes}
 \usepackage{svg}
 \usepackage{tablefootnote}
+\usepackage{lipsum}
 
 \title[Título curto]{Título da apresentação}
 \authorone[Doe]{John Doe}
@@ -35,18 +36,19 @@
 \section{Introdução}
 
 \begin{frame}{Título do slide}{Subtítulo do slide}
-This is some text in the first frame. This is some text in the first frame. This is some text in the first frame.
+\lipsum[1]
 \end{frame}
 
-\section{Conclusão}
-
+\section{Desenvolvimento}
 
 \begin{frame}{Título do slide}{Subtítulo do slide}
-This is some text in the first frame. This is some text in the first frame. This is some text in the first frame.
+\lipsum[1]
 \end{frame}
 
 \section{Conclusão}
 
-\frame{\titlepage}
+\begin{frame}{Título do slide}{Subtítulo do slide}
+\lipsum[1]
+\end{frame}
 
 \end{document}
